# RecommendationSystem

./: LFrecom.m  Makefile  README.md  script_recom.m  tron.cpp  tron.h  w_solver_recom.cpp
MixingSDPSolve/: LFlasso.m  lf_script.m  makefiletest
cbgf/: BernoulliMetropolis.h  BernoulliMetropolisBulk.h  CMakeLists.txt  Config.h  FileParser.h  Graph.h  Metrics.h  Model.h  Random.h  SArray.h  SparseBinaryMatrix.h  UniformMetropolis.h  logging.h  main.cpp  util.h
cbgf/matlab/: Z.txt  build_graph.m  load_affiliation.m  load_graph.m  metropolis_bernoulli.m  metropolis_uniform.m  myconfig.txt  mygraph.txt  normalized_mutual_information.m  random_sparse_binary_matrix.m  run_nmi_real.m  run_nmi_synthetic.m  train_bigclam.m  train_metropolis.m  write_edgelist.m
cbgf/scripts/: astro-1k-bernoulli  astro-1k-bernoulli-mac  astro-1k-bulk  astro-1k-bulk-mac  astro-1k-uniform-mac  toy-2-bernoulli-mac
